fixed safari not wrapping bluprint cards

--- a/src/components/bluprint-card/index.css
+++ b/src/components/bluprint-card/index.css
@@ -10,17 +10,13 @@
 
 .BluprintCard {
   display: flex;
-  flex: 1;
+  flex: 0 1 360px;
   flex-direction: row;
   justify-content: space-between;
   border-radius: 2px;
   border: 1px solid #E0E0E0;
-  width: 100%;
-  min-width: 360px;
-  max-width: 360px;
   height: 240px;
   margin: 12px;
-
 
   text-align: left;
   text-decoration: none;
